[project]
name = "slaformer-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-contrib-python>=4.13.0.92",
    "opencv-python>=4.13.0.92",
    "scikit-image>=0.26.0",
    "thop>=0.1.1.post2209072238",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
